samples/_failures_safe/1761471693_0b5863_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0678b4dd.c: In function ‘main’:
./samples/SAFE/__tmp_0678b4dd.c:128:16: error: missing terminating " character
  128 |         printf("Invalid columns input for matrix 2
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0678b4dd.c:128:9: error: expected expression at end of input
  128 |         printf("Invalid columns input for matrix 2
      |         ^~~~~~
./samples/SAFE/__tmp_0678b4dd.c:128:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0678b4dd.c:128:9: error: expected declaration or statement at end of input
